--- a/src/App.scss
+++ b/src/App.scss
@@ -56,3 +56,20 @@
         }
     }
 }
+
+.config {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 30rem;
+    
+    .title-input {
+        font-size: 1.5rem;
+        width: 100%;
+    }
+    
+    .upload {
+        width: 100%;
+    }
+}
