--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 @import url(https://fonts.bunny.net/css?family=permanent-marker:400|roboto:400);
-@import url('http://fonts.cdnfonts.com/css/hey-august');
+@import url('https://fonts.cdnfonts.com/css/hey-august');
 
 @media print {
     .no-print {
